# kafka-protocol

./: .gitignore  README.md  kafka-protocol.cabal
src/Network/Kafka/: Internal.hs  Protocol.hs
src/Network/Kafka/Protocol/: ConsumerMetadata.hs  Fetch.hs  Heartbeat.hs  Instances.hs  Internal.hs  JoinGroup.hs  Message.hs  Metadata.hs  Offset.hs  OffsetCommit.hs  OffsetFetch.hs  Primitive.hs  Produce.hs  Request.hs  Response.hs  Universe.hs
