name:                kafka-protocol
version:             0.1.0
synopsis:            Apache Kafka wire protocol
homepage:            https://github.com/kim/kafka-protocol
license:             MPL-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
copyright:           (c) 2015 Kim Altintop
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Network.Kafka.Protocol

  other-modules:
      Network.Kafka.Internal

  build-depends:
      base == 4.*
    , bytestring
    , cereal
    , text
    , vector

  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -Wall -O -fwarn-tabs -funbox-strict-fields
  ghc-prof-options:  -prof -auto-all
