name:                kafka-protocol
version:             0.1.0
synopsis:            Apache Kafka wire protocol
homepage:            https://github.com/kim/kafka-protocol
license:             MPL-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
copyright:           (c) 2015 Kim Altintop
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Network.Kafka.Protocol
    , Network.Kafka.Protocol.ConsumerMetadata
    , Network.Kafka.Protocol.Fetch
    , Network.Kafka.Protocol.Heartbeat
    , Network.Kafka.Protocol.Instances
    , Network.Kafka.Protocol.Internal
    , Network.Kafka.Protocol.JoinGroup
    , Network.Kafka.Protocol.Message
    , Network.Kafka.Protocol.Metadata
    , Network.Kafka.Protocol.OffsetCommit
    , Network.Kafka.Protocol.OffsetFetch
    , Network.Kafka.Protocol.Primitive
    , Network.Kafka.Protocol.Produce
    , Network.Kafka.Protocol.Request
    , Network.Kafka.Protocol.Response
    , Network.Kafka.Protocol.Universe

  build-depends:
      base == 4.*
    , bytestring
    , cereal
    , lens
    , singletons
    , text
    , vector
    , vinyl

  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -Wall -O -fwarn-tabs -funbox-strict-fields
  ghc-prof-options:  -prof -auto-all
